[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "app_engine_valis_experiment"
version = "0.1.2"
authors = [
  { name="Maxime Amodei", email="maxime.amodei@uliege.be" },
]
description = "First experiment to try VALIS on the new Cytomine app engine"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
    "openslide-bin>=4.0.0.8",
    "openslide-python>=1.4.2",
    "pyvips[binary]>=3.0.0",
    "valis-wsi>=1.2.0",
]

[tool.hatch.build]
exclude = [
	"/.vscode",
	"/.gitignore",
	"/.dockerignore",
]
