[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "app_engine_valis_experiment"
version = "0.1.3"
authors = [
  { name="Maxime Amodei", email="maxime.amodei@uliege.be" },
]
description = "First experiment to try VALIS on the new Cytomine app engine"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
]
dependencies = [
]

[tool.hatch.build]
exclude = [
	"/.vscode",
	"/.gitignore",
	"/.dockerignore",
]
